# TradingStrategies

./: .env.example  .gitignore  BTAL_Tactical_Strategy_Analysis.xlsx  BTC_Backtest_Results.xlsx  BTC_Trend.py  CryptoTrendFollowingStrategy.py  Crypto_Backtest_Results.xlsx  Crypto_MR+Trend.py  Crypto_Trend.py  Earnings_TradeIdeas_Scanner.py  Earnings_Volatility_Calculator.py  FEATURE_PROPOSALS.md  FuturesBinance.py  GCC_Stock_Downloader.py  Gold and Nasdaq.ipynb  Intraday_SPY.py  Intraday_SPY_Strategy.py  ORB Strategy.py  OnePercent_Strategy_Results.xlsx  Opening Range Breakout - Stocks in Play.ipynb  Opening Range Breakout.ipynb  Pair Trading.ipynb  QQQ_MR.py  README.md  SpotBinance.py  Stock Data Downloader.ipynb  Stocks_In_Play.py  TODO.md  TQQQ_Gold_Rebalancing_Strategy.py  TQQQ_Long Term_TF and MR.py  TQQQ_Regime_Change.py  TQQQ_Strategy_Comprehensive_Results.xlsx  TQQQ_Strategy_Results.xlsx  TQQQ_Weekly_Strategy.py  TQQ_MA_Strategy.py  TQQ_Trend_Following_Strategy.py  Top100Stocks.py  Trend Follow_SPY,QQQ,BTC,GLD.py  UPRO Gold Bitcoin-Rebalancing Strategy.py  Volatility_Calendar_Strategy.py  (+29 more)
all_binance/: 0GUSDT_daily.csv  1000CATUSDT_daily.csv  1000CHEEMSUSDT_daily.csv  1000SATSUSDT_daily.csv  1INCHDOWNUSDT_daily.csv  1INCHUPUSDT_daily.csv  1INCHUSDT_daily.csv  1MBABYDOGEUSDT_daily.csv  A2ZUSDT_daily.csv  AAVEUSDT_daily.csv  ACAUSDT_daily.csv  ACEUSDT_daily.csv  ACHUSDT_daily.csv  ACMUSDT_daily.csv  ACTUSDT_daily.csv  ACXUSDT_daily.csv  ADADOWNUSDT_daily.csv  ADAUSDT_daily.csv  ADXUSDT_daily.csv  AEURUSDT_daily.csv  AEVOUSDT_daily.csv  AGIXUSDT_daily.csv  AGLDUSDT_daily.csv  AIUSDT_daily.csv  AIXBTUSDT_daily.csv  ALCXUSDT_daily.csv  ALGOUSDT_daily.csv  ALICEUSDT_daily.csv  ALPACAUSDT_daily.csv  ALPINEUSDT_daily.csv  ALTUSDT_daily.csv  AMPUSDT_daily.csv  ANIMEUSDT_daily.csv  ANKRUSDT_daily.csv  ANTUSDT_daily.csv  ANYUSDT_daily.csv  APEUSDT_daily.csv  API3USDT_daily.csv  APTUSDT_daily.csv  ARBUSDT_daily.csv  (+479 more)
backtest_results/: 10MA_Strategy_Complete_Results.xlsx  backtest_results.xlsx
binance_futures_data/: 0GUSDT.csv  1000000BOBUSDT.csv  (+552 more)
(+1134 files in other folders)
