[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-strategies"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A library for backtesting quantitative trading strategies"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "yfinance",
    "statsmodels",
    "matplotlib",
    "pyarrow",
    "PyYAML",
]

[project.urls]
"Homepage" = "https://github.com/example/quant-trading-platform"
"Bug Tracker" = "https://github.com/example/quant-trading-platform/issues"

[tool.setuptools]
packages = ["quant_strategies"]
