[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-strategies"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A library for backtesting quantitative trading strategies"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "yfinance",
    "statsmodels",
    "matplotlib",
    "pyarrow",
    "PyYAML",
    "Flask>=2.0",
    "Flask-SQLAlchemy>=2.5",
    "Flask-Migrate>=3.0",
    "Werkzeug>=2.0",
    "bcrypt",
    "PyJWT",
    "python-dotenv",
    "flasgger",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "langchain",
    "faiss-cpu",
    "sentence-transformers",
    "SQLAlchemy",
    "pytest",
    "stripe",
]

[project.urls]
"Homepage" = "https://github.com/example/quant-trading-platform"
"Bug Tracker" = "https://github.com/example/quant-trading-platform/issues"

[tool.setuptools]
packages = ["quant_strategies"]
